# cpictures

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.superpowers/sdd/: task-3-report.md  task-5-report.md
assets/icon/: generate-app-icon.ps1  generate-file-icon.ps1
docs/superpowers/plans/: 2026-07-06-cpictures-implementation.md  2026-07-07-long-image-viewing.md  2026-07-07-online-update.md
docs/superpowers/specs/: 2026-07-06-cpictures-design.md  2026-07-07-long-image-viewing-design.md  2026-07-07-online-update-design.md
docs/verification/: 2026-07-06-cpictures.md
include/cpictures/: commands.h  geometry.h  image_document.h  image_list.h  natural_sort.h  overlay.h  supported_formats.h  view_state.h
installer/wix/: cpictures.wxs
src/: main.cpp
src/app/: app.cpp  app.h  cpictures.rc
src/codecs/: codec_manager.cpp  codec_manager.h  cpictures_codec.h
src/image/: image_document.cpp  image_list.cpp  prefetcher.cpp  prefetcher.h  supported_formats.cpp  wic_decoder.cpp  wic_decoder.h
src/platform/: clipboard_service.cpp  clipboard_service.h  context_menu.cpp  context_menu.h  dpi_awareness.cpp  dpi_awareness.h  window_metrics.cpp
src/render/: d2d_renderer.cpp  d2d_renderer.h
src/update/: update_manifest.cpp  update_manifest.h  update_service.cpp  update_service.h
src/viewer/: viewer_window.cpp  viewer_window.h
tests/: codec_abi_c_test.c  codec_manager_tests.cpp  core_tests.cpp  platform_tests.cpp  update_manifest_tests.cpp  wic_tests.cpp
